Form alignments fixed

--- a/src/assets/styles/form.scss
+++ b/src/assets/styles/form.scss
@@ -53,6 +53,10 @@
         }
       }
     }
+    .left-bs-padding
+    {
+      padding-left: 15px;
+    }
   }
   .has-error
   {
